--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "del": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "nodegit": "^0.26.5"
   },
@@ -38,5 +40,10 @@
     "eslint-plugin-jest": "^23.8.2",
     "jest": "^25.1.0",
     "jest-cli": "^25.1.0"
-  }
+  },
+  "engines": {
+    "node": "10.18.1",
+    "npm": "6.13.4"
+  },
+  "engineStrict": true
 }
